Source/JavaScriptCore/dfg/DFGDriver.cpp
@@ -35,7 +35,7 @@
 namespace JSC { namespace DFG {
 
 enum CompileMode { CompileFunction, CompileOther };
-inline bool compile(CompileMode compileMode, ExecState* exec, ExecState* calleeArgsExec, CodeBlock* codeBlock, JITCode& jitCode, MacroAssemblerCodePtr* jitCodeWithArityCheck)
+inline bool compile(CompileMode compileMode, ExecState* exec, CodeBlock* codeBlock, JITCode& jitCode, MacroAssemblerCodePtr* jitCodeWithArityCheck)
 {
     JSGlobalData* globalData = &exec->globalData();
     Graph dfg;
@@ -43,7 +43,7 @@ inline bool compile(CompileMode compileMode, ExecState* exec, ExecState* calleeA
         return false;
     
     if (compileMode == CompileFunction)
-        dfg.predictArgumentTypes(calleeArgsExec, codeBlock);
+        dfg.predictArgumentTypes(codeBlock);
     
     propagate(dfg, globalData, codeBlock);
     
@@ -64,12 +64,12 @@ inline bool compile(CompileMode compileMode, ExecState* exec, ExecState* calleeA
 
 bool tryCompile(ExecState* exec, CodeBlock* codeBlock, JITCode& jitCode)
 {
-    return compile(CompileOther, exec, 0, codeBlock, jitCode, 0);
+    return compile(CompileOther, exec, codeBlock, jitCode, 0);
 }
 
-bool tryCompileFunction(ExecState* exec, ExecState* calleeArgsExec, CodeBlock* codeBlock, JITCode& jitCode, MacroAssemblerCodePtr& jitCodeWithArityCheck)
+bool tryCompileFunction(ExecState* exec, CodeBlock* codeBlock, JITCode& jitCode, MacroAssemblerCodePtr& jitCodeWithArityCheck)
 {
-    return compile(CompileFunction, exec, calleeArgsExec, codeBlock, jitCode, &jitCodeWithArityCheck);
+    return compile(CompileFunction, exec, codeBlock, jitCode, &jitCodeWithArityCheck);
 }
 
 } } // namespace JSC::DFG
